Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberBoolObj.quorum
Boolean b
b:SetValue(true)
number n = cast(number, b)