Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumberBoolObj.quorum
Boolean bool
bool:setValue(true)
number n = bool